--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -150,9 +150,7 @@
     <li><a href="/mesa">Mesa</a></li>
     <li><a href="/mesero">Mesero</a></li>
     <li><a href="/pedidos">Pedidos</a></li>
-    <li><a href="/foro">Foro</a></li>
-    <li><a href="/producto">Producto</a></li>
-    <li><a href="/facturas">Facturas</a></li>
+    <li><a href="/factura">Facturas</a></li>
     <li><a href="/platillos">Platillos</a></li>
   </ul>
 </nav>
