--- a/src/main/resources/templates/cgcjhjkjlkj.html
+++ b/src/main/resources/templates/cgcjhjkjlkj.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ftftyfjfkhhj</title>
+    <title>ftftyfjfkhADadhj</title>
 </head>
 <body>
 
